--- a/components/portfolio/imageCaptionCard/style.module.scss
+++ b/components/portfolio/imageCaptionCard/style.module.scss
@@ -63,6 +63,17 @@
 
     &:hover {
       border-color: color(heading-liner);
+
+      .imgBox div {
+        border-radius: 12px;
+        margin-bottom: text(lg);
+        height: 322px;
+        overflow: hidden;
+
+        img {
+          scale: 1.2;
+        }
+      }
     }
 
     .cardImg {
@@ -108,6 +119,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+          @include transition(0.5s);
         }
       }
     }
