--- a/components/ui/postCard/style.module.scss
+++ b/components/ui/postCard/style.module.scss
@@ -33,6 +33,7 @@
          object-fit: cover;
          width: 100%;
          height: 100%;
+         @include transition(0.5s);
       }
    }
    .cardBody {
@@ -55,6 +56,15 @@
          margin-bottom: 0;
          max-width: 60%;
       }
+   }
+
+   &:hover {
+
+   .cardImg div {
+      img {
+         scale: 1.1
+      }
+   }
    }
 }
 
